demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: <namespace-label>
  name: <namespace>
